# 3D-Scanner-by-Baxter

./: BUG_LIST.md  CMakeLists.txt  README.md  package.xml
config/: T_arm_to_depth.txt  T_baxter_to_chess.txt  baxter_joint_angles.txt  config.yaml  rviz_baxter_and_clouds.rviz  rviz_debug_baxter.rviz  rviz_debug_depth_cam.rviz  rviz_depth_image.rviz  rviz_depth_image_2.rviz  rviz_final_cloud.rviz  rviz_segmented_cloud.rviz
doc/: BUG_LIST.md  bug_list.md  notes_Kinect.md  notes_RealSense.md  notes_calib_rgbcam_by_ROS.md  other_notes.md  pcl_test_results.odt  tutorials.md
doc/Others/: test_bit_operations.py
doc/others/: test_geotrans_ros_euler.py  test_geotrans_ros_quaternion.py  test_keyinput.py  test_ros_keyboard.py  testing_log.md
doc/references/: copied_joint_position_keyboard.py  copied_joint_trajectory_client.py
include/my_basics/: basics.h  eigen_funcs.h
include/my_pcl/: common_headers.h  pcl_advanced.h  pcl_common.h  pcl_commons.h  pcl_filters.h  pcl_funcs.h  pcl_io.h  pcl_visualization.h
launch/: calib_camera_pose.launch  debugging_commands.bash  main_3d_scanner.launch  my_baxter_services_provider.launch  open_rgbd_camera.launch  run_baxter_gazebo.launch  run_baxter_my_services_provider.launch  run_main.launch  run_main_3d_scanner.launch  run_rgbd_camera.launch  run_rviz.launch  sub_cloud_press_key_to_save.launch  test_open3d_read_pub_sub_display.launch  test_pcl_read_pub_sub_display.launch  test_publish_a_cloud.launch  test_subscribe_a_cloud_and_display.launch  useful_commands.bash
launch/scripts_for_debug/: joy_stick.launch  open_baxter_gazebo.launch  open_usb_camera.launch  rviz_for_debug_baxter.launch  rviz_for_rgbd_point_cloud.launch
launch/test_point_cloud_pub_sub_display/: test_open3d_read_pub_sub_display.launch  test_pcl_read_pub_sub_display.launch  test_publish_a_cloud.launch  test_subscribe_a_cloud_and_display.launch
msg/: T4x4.msg
src/: CMakeLists.txt  README.md  convert_pointcloud_file_format.py  pcl_funcs.cpp
src/my_pcl/: pcl_advanced.cpp  pcl_common.cpp  pcl_commons.cpp  pcl_filters.cpp  pcl_io.cpp  pcl_visualization.cpp
src_cpp/: CMakeLists.txt  README.md
src_cpp/my_basics/: basics.cpp
src_cpp/my_pcl/: pcl_advanced.cpp  pcl_filters.cpp  pcl_visualization.cpp
src_main/: CMakeLists.txt  README.md  n1_fake_data_publisher.py  n1_move_baxter.py  n1_work_flow_control.py  n2_filt_and_seg_object.cpp  n3_register_clouds_to_object.py
src_main/assistance/: my_baxter_services_provider.py
src_main/calib_camera_pose/: calib_camera_pose.py  notes_AsusXtion.md  notes_Kinect.md
src_main/camera_calibration/: notes_Asus.md  notes_Kinect.md
src_python/: README.md  convert_point_cloud_file_type.py  convert_pointcloud_file_format.py  lib_baxter.py  lib_cam_calib.py  lib_cloud_conversion_between_Open3D_and_ROS.py  lib_cloud_registration.py  lib_commons.py  lib_geo_trans.py  lib_geo_trans_ros.py  lib_keyboard_input.py
src_python/baxter/: README.md  lib_baxter.py
src_ros/: CMakeLists.txt  README.md  example_PointCloud2.txt  n1-work_flow_control.py  n1_work_flow_control.py  n2-filt_and_seg_object.cpp  n2_filt_and_seg_object.cpp  n3-register_clouds_to_object.py  n3_register_clouds_to_object.py  read_cloud_and_pub_by_open3d.py  read_cloud_and_pub_by_pcl.cpp  sub_cloud_and_display_by_pcl.cpp  test_geotrans_officialtest.py  test_geotrans_ros_cv_euler.py  test_geotrans_ros_quaternion.py
srv/: PrintBaxterGripperPose.srv  PrintBaxterJointAngles.srv
test/: CMakeLists.txt  common_scripts.cpp  open3d_test_colored_ICP.py  pcl_notes.cpp  pcl_test_filt_seg_clustering.cpp  pcl_test_read_write_display.cpp  read_pcl_and_display.cpp  simple_test.cpp  test_filt_seg_clustering.cpp  test_filter_and_seg.cpp  test_pcl_viewer_of_synthesized_point_cloud.cpp  test_read.py  test_read_write_display.cpp  tmp_test_for_small_funcs.cpp  tmp_test_for_small_funcs.py
test_ros/: CMakeLists.txt  my_baxter_services_provider.py  read_cloud_and_pub_by_open3d.py  read_cloud_and_pub_by_pcl.cpp  sub_cloud_and_display_by_open3d.py  sub_cloud_and_display_by_pcl.cpp
